--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
 	"dependencies": {
 		"dotenv": "^17.2.2",
-		"openai": "^5.20.0"
+		"google-auth-library": "^10.3.0",
+		"googleapis": "^159.0.0",
+		"openai": "^5.20.0",
+		"zod": "^4.1.7"
 	},
 	"devDependencies": {
 		"@types/node": "^24.3.1"
