--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
 	"dependencies": {
+		"@langchain/community": "^0.3.55",
+		"@langchain/core": "^0.3.75",
+		"@langchain/openai": "^0.6.11",
+		"@langchain/qdrant": "^0.1.3",
+		"@langchain/textsplitters": "^0.1.0",
 		"dotenv": "^17.2.2",
 		"google-auth-library": "^10.3.0",
 		"googleapis": "^159.0.0",
 		"openai": "^5.20.0",
+		"pdf-parse": "^1.1.1",
 		"zod": "^4.1.7"
 	},
 	"devDependencies": {
