--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
 	"dependencies": {
 		"@langchain/community": "^0.3.55",
 		"@langchain/core": "^0.3.75",
+		"@langchain/langgraph": "^0.4.9",
 		"@langchain/openai": "^0.6.11",
 		"@langchain/qdrant": "^0.1.3",
+		"@langchain/tavily": "^0.1.5",
 		"@langchain/textsplitters": "^0.1.0",
 		"dotenv": "^17.2.2",
 		"google-auth-library": "^10.3.0",
