--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+	"type": "module",
+	"scripts": {
+		"start": "node --loader ts-node/esm langgraph/chat.ts"
+	},
 	"dependencies": {
 		"@langchain/community": "^0.3.55",
 		"@langchain/core": "^0.3.75",
@@ -7,6 +11,7 @@
 		"@langchain/qdrant": "^0.1.3",
 		"@langchain/tavily": "^0.1.5",
 		"@langchain/textsplitters": "^0.1.0",
+		"@notionhq/client": "^5.1.0",
 		"dotenv": "^17.2.2",
 		"google-auth-library": "^10.3.0",
 		"googleapis": "^159.0.0",
@@ -15,6 +20,8 @@
 		"zod": "^4.1.7"
 	},
 	"devDependencies": {
-		"@types/node": "^24.3.1"
+		"@types/node": "^24.3.1",
+		"ts-node": "^10.9.0",
+		"typescript": "^5.0.0"
 	}
 }
