--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@langchain/community": "^0.3.55",
 		"@langchain/core": "^0.3.75",
 		"@langchain/langgraph": "^0.4.9",
+		"@langchain/langgraph-checkpoint-mongodb": "^0.1.1",
 		"@langchain/openai": "^0.6.11",
 		"@langchain/qdrant": "^0.1.3",
 		"@langchain/tavily": "^0.1.5",
@@ -15,6 +16,7 @@
 		"dotenv": "^17.2.2",
 		"google-auth-library": "^10.3.0",
 		"googleapis": "^159.0.0",
+		"mongodb": "^6.19.0",
 		"openai": "^5.20.0",
 		"pdf-parse": "^1.1.1",
 		"zod": "^4.1.7"
