--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"dotenv": "^17.2.2",
 		"google-auth-library": "^10.3.0",
 		"googleapis": "^159.0.0",
+		"mem0ai": "^2.1.38",
 		"mongodb": "^6.19.0",
 		"openai": "^5.20.0",
 		"pdf-parse": "^1.1.1",
