--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"googleapis": "^159.0.0",
 		"mem0ai": "^2.1.38",
 		"mongodb": "^6.19.0",
+		"neo4j-driver": "^5.28.1",
 		"openai": "^5.20.0",
 		"pdf-parse": "^1.1.1",
 		"zod": "^4.1.7"
