--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@langchain/tavily": "^0.1.5",
 		"@langchain/textsplitters": "^0.1.0",
 		"@notionhq/client": "^5.1.0",
+		"@qdrant/js-client-rest": "^1.15.1",
 		"dotenv": "^17.2.2",
 		"google-auth-library": "^10.3.0",
 		"googleapis": "^159.0.0",
