--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"start": "node --loader ts-node/esm langgraph/chat.ts"
 	},
 	"dependencies": {
+		"@langchain/cohere": "^0.3.4",
 		"@langchain/community": "^0.3.55",
 		"@langchain/core": "^0.3.75",
 		"@langchain/langgraph": "^0.4.9",
