--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@langchain/core": "^0.3.75",
 		"@langchain/langgraph": "^0.4.9",
 		"@langchain/langgraph-checkpoint-mongodb": "^0.1.1",
+		"@langchain/mcp-adapters": "^0.6.0",
 		"@langchain/openai": "^0.6.11",
 		"@langchain/qdrant": "^0.1.3",
 		"@langchain/tavily": "^0.1.5",
@@ -22,6 +23,7 @@
 		"mem0ai": "^2.1.38",
 		"mongodb": "^6.19.0",
 		"neo4j-driver": "^5.28.1",
+		"node-fetch": "^3.3.2",
 		"openai": "^5.20.0",
 		"pdf-parse": "^1.1.1",
 		"zod": "^4.1.7"
